--- a/templates/aulas_previstas/homepage.html
+++ b/templates/aulas_previstas/homepage.html
@@ -37,7 +37,7 @@
 
                 <div class="card-body card-outline card-primary">
                     <form method="post" id="feriadoForm"
-                          data-feriados-url="{% url 'AulasPrevistas:ajax_load_feriados' %}" novalidate>
+                          data-feriados-url="{% url 'aulas_previstas:ajax_load_feriados' %}" novalidate>
                         {% csrf_token %}
 
                         <!-- /.Campos do formulário -->
