formatar o formulário cont.

--- a/templates/aulas_previstas/homepage.html
+++ b/templates/aulas_previstas/homepage.html
@@ -144,7 +144,7 @@
                                                                     <i class="fas fa-calendar-day"></i>
                                                                 </span>
                                                             </div>
-                                                            {% render_field field class="form-control float-right" value="20/04/2005" id="reservation" placeholder=field.label %}
+                                                            {% render_field field class="form-control float-right" value="20/04/2005" id="reservation" disabled="disabled" placeholder=field.label %}
                                                         </div>
                                                     </div>
 
@@ -172,7 +172,7 @@
                                                                     <i class="fas fa-calendar-day"></i>
                                                                 </span>
                                                             </div>
-                                                            {% render_field field class="form-control input float-right" value="20/04/2005" id="reservation" placeholder=field.label %}
+                                                            {% render_field field class="form-control input float-right" value="20/04/2005" id="reservation" disabled="disabled" placeholder=field.label %}
                                                         </div>
                                                     </div>
 
@@ -198,7 +198,7 @@
                                                                     <i class="fas fa-calendar-day"></i>
                                                                 </span>
                                                             </div>
-                                                            {% render_field field class="form-control input float-right" value="20/04/2005" id="reservation" placeholder=field.label %}
+                                                            {% render_field field class="form-control input float-right" value="20/04/2005" id="reservation" disabled="disabled" placeholder=field.label %}
                                                         </div>
                                                     </div>
 
@@ -337,19 +337,28 @@
                             <div class="card-body">
                                 <h6 class="card-title">Special title treatment</h6>
 
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">
+                                    Calculadora Web de Aulas Previstas para o 1º, 2º 3º ciclos e ensino secundário.
+                                    Com base no calendário escolar de cada ano letivo e na carga horária semanal da
+                                    disciplina, calcula as aulas previstas por período, semestre e ano.
+                                </p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
 
                         <div class="card card-primary card-outline">
                             <div class="card-header">
-                                <h5 class="card-title m-0">Featured</h5>
+                                <h2 class="card-title m-0">Funcionalidade da calculadora Web de Aulas Previstas</h2>
                             </div>
                             <div class="card-body">
-                                <h6 class="card-title">Special title treatment</h6>
 
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <p class="card-text">
+
+                                    Com base no calendário escolar de cada ano letivo e na carga horária semanal da
+                                    disciplina, calcula as aulas previstas por período, semestre e ano para os para o 1º
+                                    , 2º 3º ciclos e ensino secundário.
+
+                                </p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
