Ajax and jquery optimizations in form

--- a/templates/aulas_previstas/feriado_dropdown_list_options.html
+++ b/templates/aulas_previstas/feriado_dropdown_list_options.html
@@ -1,4 +1,4 @@
-<option value=""> Feriado Municipal </option>
+<option value=""> Selecione... </option>
 {% for feriado in feriados %}
     <option value="{{ feriado.pk }}">{{ feriado }}</option>
 {% endfor %}
